syntax = "proto3";

package thru.common.v1;

import "buf/validate/validate.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/Unto-Labs/thru-net/grpc/pkg/proto/thru/common/v1;commonv1";
option java_multiple_files = true;
option java_package = "network.thru.common.v1";
option csharp_namespace = "Thru.Common.V1";
option ruby_package = "Thru::Common::V1";
option objc_class_prefix = "THU";
option swift_prefix = "THU";

// Pubkey represents a 32-byte public key value.
message Pubkey {
  // 32-byte public key buffer.
  bytes value = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).bytes.len = 32
  ];
}

// Signature represents a 64-byte signature value.
message Signature {
  // 64-byte signature buffer.
  bytes value = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).bytes.len = 64
  ];
}

// TaPubkey represents a ta-encoded public key string (46 characters).
message TaPubkey {
  // 46-character ta-encoded public key string.
  string value = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string.len = 46
  ];
}

// TsSignature represents a ts-encoded signature string (90 characters).
message TsSignature {
  // 90-character ts-encoded signature string.
  string value = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string.len = 90
  ];
}
